updating for spring 25

--- a/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
+++ b/POSC 521 MPA Capstone/2024-25 Spring/POSC521_2025_Spring.tex
@@ -43,8 +43,8 @@
 \title{\includegraphics[width=8cm]{Images/stacked.png} \\ \textbf{Introduction to Public Administration}}
 
 \title{MPA Capstone Seminar: \\ Public Administration Theory}
-\author{POSC 521 — Fall 2024}
-\date{Thursdays at 7:00 in GH 248}
+\author{POSC 521 — Spring 2025}
+\date{Tuesdays at 7:00 in GH 208}
     \maketitle
     \subsection*{Session Schedule:}
     
@@ -62,6 +62,7 @@
     
     \subsubsection*{Asynchronous Online Sessions}
     \begin{itemize}[leftmargin=*]
+      \item January 21
       \item October 24, 31
       \item November 7, 28
       \item December 5, 19
@@ -292,171 +293,227 @@ This AI policy is designed to align with our course objectives:
 \end{itemize}
 
 \noindent These assessment methods will help ensure that AI use is enhancing, rather than replacing, critical thinking and analytical skills essential to public administration.
-
  
+\section{Course Requirements}
+\subsection*{Weekly Readings Assignment}
 
-\section*{Kritik: Peer Review Platform}
+The capstone course is designed to integrate key theories and practices in public administration through weekly assignments culminating in a comprehensive capstone synthesis paper. Students will engage with foundational readings, participate in in-person discussions, and produce critical analyses that connect theory to practice.
 
-\noindent This course will use the peer review platform \href{https://kritik.io/}{Kritik} for peer review assignments. Kritik is an online platform that allows students to provide feedback on their classmates' work. Students will be assigned to review the work of their peers and provide constructive feedback. Students will also receive feedback from their peers on their own work. The professor will use Kritik to monitor the peer review process and provide guidance as needed.
-\vspace{0.5em}
-\noindent The Kritik platform will be used for the weekly syntheses and the concentration area literature review assignments. Students are expected to familiarize themselves with the platform and use it to complete the peer review assignments. The professor will provide guidance and support as needed to ensure that students can use Kritik effectively.
+\subsubsection*{Weekly Assignment Workflow}
 
-\subsection*{Kritik Overview}
-
-\begin{itemize}
-
-\item \textbf{A Three-Stage Learning Process:}
+Each week includes the following components:
 
 \begin{enumerate}
-    \item Craft Your Analysis: Follow the provided rubric and delve into a public policy challenge. This could involve, for example, evaluating the ethical implications of a proposed environmental regulation or assessing the effectiveness of a social welfare program.
-    \item Provide Constructive Critique: Anonymously evaluate your peers' work using the rubric. Offer actionable feedback that focuses on the strengths and weaknesses of their analysis, drawing connections to relevant public administration concepts.
-    \item Reflect and Improve: Receive anonymous feedback on the quality and impact of your comments. Learn to deliver clear, concise, and impactful feedback—a crucial skill for public servants collaborating on complex issues.
+    \item \textbf{Annotated Bibliography (Due Tuesday Before Class)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Prepare for in-class discussion by summarizing key ideas and evaluating the relevance of assigned readings.
+        \item \textbf{Instructions}:
+        \begin{itemize}
+            \item For each assigned reading:
+            \begin{itemize}
+                \item Provide a citation in APA or Chicago author-date style.
+                \item Write a 150-word annotation that includes:
+                \begin{itemize}
+                    \item A brief summary of the central argument and key points.
+                    \item Relevance to the week’s topic and implications for public administration.
+                \end{itemize}
+            \end{itemize}
+            \item \textbf{Optional AI Integration}: Students may use ChatGPT to review their annotations:
+            \begin{quote}
+                I’ve completed an annotated bibliography for [Reading Title]. Here’s the citation: [Insert Citation]. \\ 
+                The summary is: [Insert Summary]. \\ 
+                The relevance is: [Insert Relevance]. \\ 
+                Could you provide feedback on clarity and completeness?
+            \end{quote}
+        \end{itemize}
+    \end{itemize}
+
+    \item \textbf{In-Person Class Discussion (Tuesday)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Deepen understanding of the week’s readings through collaborative discussion.
+        \item \textbf{Activity}: Analyze key themes, patterns, and contradictions in the readings.
+    \end{itemize}
+
+    \item \textbf{Synthesis Paper (Due Thursday Night)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Develop a critical analysis integrating insights from the readings and in-class discussion.
+        \item \textbf{Instructions}:
+        \begin{itemize}
+            \item Write a 3- to 5-page synthesis paper that:
+            \begin{itemize}
+                \item Identifies patterns, connections, and contradictions across the readings.
+                \item Highlights implications for public administration theory and practice.
+            \end{itemize}
+            \item \textbf{Optional AI Integration}:
+            \begin{quote}
+                I’ve written a synthesis paper based on [number] readings about [topic]. \\ 
+                Here’s the draft: [Insert Draft]. \\ 
+                Could you identify gaps, suggest additional connections, or refine the analysis?
+            \end{quote}
+        \end{itemize}
+    \end{itemize}
+
+    \item \textbf{Peer Review (Due Friday Night)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Strengthen synthesis papers through collaborative feedback.
+        \item \textbf{Instructions}:
+        \begin{itemize}
+            \item Review two classmates’ papers using a rubric provided on Canvas.
+            \item Provide constructive feedback focusing on clarity, depth of analysis, and connections between readings.
+        \end{itemize}
+    \end{itemize}
+
+    \item \textbf{Final Synthesis Paper \& Reflection (Due Saturday Night)}
+    \begin{itemize}
+        \item \textbf{Purpose}: Incorporate feedback to refine the synthesis paper.
+        \item \textbf{Instructions}:
+        \begin{itemize}
+            \item Revise the synthesis paper based on peer feedback.
+            \item \textbf{Optional AI Integration}:
+            \begin{quote}
+                I’ve revised my synthesis paper after peer review. \\ 
+                Could you evaluate whether the revisions address key feedback and suggest improvements for clarity or depth?
+            \end{quote}
+            \item Submit the final synthesis to Canvas.
+            \item \textbf{Optional Reflection}:
+            \begin{itemize}
+                \item Reflect on your learning process and the feedback received.
+                \item Use ChatGPT to refine reflections:
+                \begin{quote}
+                    I’ve written a reflection on my learning process for this week. \\ 
+                    Here’s my reflection: [Insert Reflection]. \\ 
+                    Could you suggest additional insights or perspectives to consider?
+                \end{quote}
+            \end{itemize}
+        \end{itemize}
+    \end{itemize}
 \end{enumerate}
 
-\item \textbf{Grading and Participation:} You'll earn four scores for each Kritik activity: Creation, Evaluation, Feedback, and Overall. These scores, along with active participation, will contribute to your course grade. Participating thoughtfully in Kritik activities will not only improve your own skills but also enrich the learning experience for your peers.
+\subsubsection*{Key Weeks and Capstone Activities}
 
-\item \textbf{Registration and Support:} We'll thoroughly introduce Kritik in class, and a dedicated email invitation will guide you through registration and course enrollment. The Kritik Help Center offers additional resources, and I'm always available to address any questions or concerns.
-\end{itemize}
-\section{Course Requirements}
-\subsection*{1) Weekly Annotated Bibliography, Synthesis, and Reflection}
-
-To facilitate class discussions and prepare you for comprehensive exams, your weekly writing assignment comprises two main components: an annotated bibliography of each weekly reading and a 3- to 5-page synthesis of the week's readings. You may also submit a personal reflection for bonus points. 
-
-\subsubsection*{Definitions}
+\paragraph{Week 1: Public Administration Theory I (Asynchronous)}
 \begin{itemize}
-\item \textbf{Annotated Bibliography}: An annotated bibliography is an organized list of sources, similar to a reference list. Each source is followed by a brief (approximately 150 words) descriptive and evaluative paragraph—the annotation. For this course:
-
-\begin{itemize}
-    \item \textbf{Citation}: Provide a full citation in APA or Chicago author-date style.
-    \item \textbf{Summary}: Summarize the central theme and key points in your own words.
-    \item \textbf{Relevance}: Note the source's relevance to the week's topic and its implications for public administration.
-\end{itemize}
-
-\noindent The purpose is to review the literature on the week's topic, aiding in class discussions and developing your ability to distill and synthesize complex information.
-
-\item \textbf{Synthesis}: A synthesis combines information from multiple sources to present a comprehensive understanding or argument. In this context, your sources are the weekly readings. The synthesis should:
-
-\begin{itemize}
-    \item Identify patterns and themes across readings;
-    \item Draw connections between sources; and
-    \item Address contradictions among sources or within individual readings.
-\end{itemize}
-
-\noindent This critical analysis encourages deeper thinking about the readings and their implications for public administration theory and practice.
-
-\item \textbf{Reflection} (Optional Bonus Activity): Reflection is a metacognitive practice that allows you to analyze your learning process, feedback received, and the evolution of your understanding of the week's topic. This activity is optional and offers bonus points. It involves self-assessment and promotes continuous improvement.
-
-\end{itemize}
-\subsubsection*{Assignment Details}
-
-\textbf{Objectives}: Engage deeply with course readings, reflect on their implications for public administration, and collaborate with peers and AI to enhance analytical and writing skills.
-\vspace{0.5em}
-
-\noindent \textbf{Incorporating AI}: We'll use AI tools like ChatGPT to provide feedback on your assignments, aiming to refine your comprehension and writing skills. Remember, AI is a complementary tool to your critical thinking.
-
-\subsubsection*{Assignment Components}
-
-\begin{boldnumlist}
-\item \textbf{Annotated Bibliography}
-
-\begin{itemize}
-    \item \textbf{Purpose}: Review literature on the week's topic to prepare for synthesis and class discussions.
-    \item \textbf{Process}:
+    \item \textbf{Mode}: Asynchronous (video provided).
+    \item \textbf{Content}:
     \begin{itemize}
-        \item Write an annotation (150 words) for each weekly reading, including:
+        \item Video lecture and foundational readings:
         \begin{itemize}
-            \item Full citation in APA or Chicago author-date style
-            \item Summary of central themes and key points.
-            \item Relevance to the week's topic.
+            \item \citet{Wilson1887}, *The Study of Administration*.
+            \item \citet{Weber1946}, *Bureaucracy*.
+            \item \citet{gulick1937}, *Notes on the Theory of Organization*.
+            \item \citet{Follett1926}, *The Giving of Orders*.
+            \item \citet{simon1946}, *Proverbs of Administration*.
         \end{itemize}
-        \item \textbf{Optional}: Submit your annotations to AI for feedback using the prompt:
-        \textit{"I've completed an annotated bibliography for an article. The citation is [insert citation]. The summary I wrote is [insert summary]. I've noted the relevance as [insert relevance]. Could you provide feedback on my summary and relevance note?"}
-        \item Revise based on AI feedback as desired. This activity is ungraded and for your benefit.
+    \end{itemize}
+    \item \textbf{Assignments}:
+    \begin{itemize}
+        \item \textbf{Annotated Bibliography (Optional)}: Students may complete this to prepare for Week 2.
+        \item No synthesis or peer review this week.
     \end{itemize}
 \end{itemize}
 
-\item \textbf{Synthesis - Kritik Component}
-
+\paragraph{Weeks 2–8: Standard Weekly Workflow}
+Each week follows the established structure:
 \begin{itemize}
-    \item \textbf{Purpose}: Integrate main themes and insights from weekly readings, discussing their implications for public administration. This component will be conducted on the Kritik platform, and all papers should be submitted anonymously to ensure unbiased feedback.
-    
-    \item \textbf{Process}:
+    \item Annotated Bibliography (due Tuesday before class).
+    \item In-Person Discussion (Tuesday).
+    \item Synthesis Draft (due Thursday).
+    \item Peer Review (due Friday).
+    \item Final Synthesis \& Optional Reflection (due Saturday).
+\end{itemize}
+
+\paragraph{Week 9: 21st Century Challenges}
+\begin{itemize}
+    \item \textbf{Content}:
     \begin{itemize}
-        \item Write a 3- to 5-page synthesis, focusing on:
+        \item \citet{maynard-moody2012}, *Social Equities and Inequities in Practice*.
+        \item \citet{GOODEN2017}, *Social Equity and Evidence*.
+        \item \citet{mccandless2022}, *A Long Road*.
+        \item \citet{Denhardt2015}, *The New Public Service*, Chapters 10–12.
+    \end{itemize}
+    \item \textbf{Assignments}:
+    \begin{itemize}
+        \item Annotated Bibliography (due Tuesday before class).
+        \item Synthesis Draft (due Thursday).
+        \item Peer Review (due Friday).
+        \item Final Synthesis \& Optional Reflection (due Saturday).
+    \end{itemize}
+\end{itemize}
+
+\paragraph{Week 10: Capstone Synthesis}
+\begin{itemize}
+    \item \textbf{In-Person Class (Tuesday)}: Final synthesis preparation.
+    \begin{itemize}
+        \item \textbf{Activities}:
         \begin{itemize}
-            \item Critical analysis rather than mere summaries.
-            \item Identifying patterns, connections, and contradictions across the readings.
+            \item Review key themes from the course.
+            \item Peer brainstorming and feedback on capstone ideas.
         \end{itemize}
-        \item Submit your synthesis to Kritik for peer feedback.
-        \item Provide constructive feedback to at least three classmates through Kritik.
-        \item Revise your synthesis based on peer feedback received through Kritik.
     \end{itemize}
-    
-    \item \textbf{Submission}:
+    \item \textbf{Capstone Synthesis Paper}:
     \begin{itemize}
-        \item Submit your initial synthesis to Kritik for peer review and feedback.
-        \item Complete peer reviews on at least three classmates' submissions.
-        \item Revise your synthesis based on the feedback received from Kritik peer reviews.
-    \end{itemize}
-    
-    \item \textbf{Grading}:
-    \begin{itemize}
-        \item Your grade will be based on the quality of your synthesis, participation in peer reviews, and the revisions made based on feedback.
-    \end{itemize}
-\end{itemize}
-
-\item \textbf{Synthesis - Canvas Component}
-
-\begin{itemize}
-    \item \textbf{Purpose}: Submit the revised synthesis after peer review, ensuring that the final version reflects thoughtful analysis and consideration of previous feedback.
-    
-    \item \textbf{Process}:
-    \begin{itemize}
-        \item After revising your synthesis from the Kritik peer reviews, submit it to an AI tool for feedback using the following prompt:
-        
-        \textit{"I've synthesized information from [number] articles on [topic]. Here's my draft of the synthesis [insert draft]. Could you provide feedback and suggest any connections or contrasts I might have missed?"}
-        
-        \item You must include the AI feedback output with your final submission to Canvas.
-        \item Revising your synthesis based on AI feedback is optional but encouraged for improvement.
-    \end{itemize}
-    
-    \item \textbf{Submission}:
-    \begin{itemize}
-        \item Submit your revised synthesis \emph{along with the AI feedback output} to Canvas for grading.
-        \item Ensure that both the final paper and the AI feedback are submitted in a single file to Canvas.
-    \end{itemize}
-    
-    \item \textbf{Grading}:
-    \begin{itemize}
-        \item Your Canvas grade will be based on the quality of your synthesis and submission of the AI feedback.
-        \item Updating your synthesis based on AI feedback is optional and will not impact the grade.
-    \end{itemize}
-\end{itemize}
-
-
-\item \textbf{Bonus Point Reflection Activity} (Optional)
-
-\begin{itemize}
-    \item \textbf{Purpose}: Engage in metacognitive practice to analyze your learning process and feedback.
-    \item \textbf{Process}:
-    \begin{itemize}
-        \item After completing your revised synthesis and reviewing AI feedback, reflect on the entire process, including annotated bibliographies and peer reviews.
-        \item Consider the following questions (optional):
+        \item \textbf{Objective}: Integrate course material into a comprehensive analysis.
+        \item \textbf{Requirements}:
         \begin{itemize}
-            \item How did your understanding of the readings evolve?
-            \item Which feedback (from peers or AI) was most beneficial, and why?
-            \item How did the peer review process impact your perspective or approach?
-            \item What strategies were most effective in distilling and presenting information?
-            \item How can you apply lessons from this assignment to future tasks in public administration or other professional settings?
+            \item Length: 8–10 pages.
+            \item Synthesize weekly topics into a cohesive argument.
+            \item Highlight themes, patterns, contradictions, and future implications.
         \end{itemize}
-        \item Write a brief reflection encapsulating your thoughts.
-        \item Submit your reflection to AI for feedback using the prompt:
-        \textit{"I've completed a reflection on my learning process for this week's synthesis assignment. Here's my reflection [insert reflection]. Could you provide feedback or ask questions to provoke further thought?"}
-        \item Submit both your reflection and the AI's feedback to Canvas for bonus point consideration.
+        \item \textbf{Assignments}:
+        \begin{itemize}
+            \item \textbf{Capstone Draft} (due Thursday night).
+            \item \textbf{Peer Review} (due Friday night).
+            \item \textbf{Final Capstone Submission} (due Saturday night).
+        \end{itemize}
     \end{itemize}
 \end{itemize}
-\end{boldnumlist}
-\subsubsection*{Skip Week!}
+
+\subsubsection*{Grading Breakdown}
+\begin{table}[h!]
+\centering
+\begin{tabular}{|l|c|}
+\hline
+\textbf{Component} & \textbf{Weight (\%)} \\
+\hline
+Weekly Annotated Bibliographies & 20\% \\
+Weekly Synthesis Papers & 40\% \\
+Peer Reviews & 15\% \\
+Capstone Synthesis Paper & 20\% \\
+Bonus Reflections & 5\% \\
+\hline
+\end{tabular}
+\end{table}
+
+\subsubsection*{Rubrics}
+
+\paragraph{Annotated Bibliography Rubric}
+\begin{table}[h!]
+\centering
+\begin{tabular}{|l|c|c|c|}
+\hline
+\textbf{Criteria} & \textbf{Excellent (3)} & \textbf{Satisfactory (2)} & \textbf{Needs Improvement (1)} \\
+\hline
+Citation Format & Accurate APA/Chicago citation. & Minor formatting errors. & Significant errors. \\
+Summary & Clear and concise. Covers key points. & Partial summary or unclear. & Missing key details. \\
+Relevance & Strong, clear connection to topic. & Some connection to topic. & Unclear or weak connection. \\
+\hline
+\end{tabular}
+\end{table}
+
+\paragraph{Synthesis Paper Rubric}
+\begin{table}[h!]
+\centering
+\begin{tabular}{|l|c|c|c|}
+\hline
+\textbf{Criteria} & \textbf{Excellent (5)} & \textbf{Satisfactory (3)} & \textbf{Needs Improvement (1)} \\
+\hline
+Analysis & Thorough analysis with connections and contradictions. & Some connections but lacks depth. & Little analysis or connections. \\
+Organization & Clear structure and flow. & Somewhat organized. & Disorganized or unclear. \\
+Writing & Well-written, few errors. & Minor errors but readable. & Frequent errors, unclear. \\
+\hline
+\end{tabular}
+\end{table}
+
 
 Students may skip one week of the annotated bibliography, synthesis, and reflection assignment during the semester. This option is intended to accommodate unexpected events or personal commitments. If you choose to skip a week, please notify the professor in advance. In place of the final synthesis during the skip week place a note in the Canvas assignment indicating that you are using your skip week.
 
@@ -647,7 +704,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
     \item \textbf{In-person Session}: Introduction to the Course
     \item Readings:
         \begin{itemize}
-            \item \citet{Wilson1887}, ``The Study of Administration''
+            \item \citet{wilson1887}, ``The Study of Administration''
             \item \citet{Weber1946}, ``Bureaucracy'' 
             \item \citet{gulick1937}, ``Notes on the Theory of Organization'' 
             \item \citet{Follett1926}, ``The Giving of Orders'' 
@@ -739,9 +796,9 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
         \begin{itemize}
             \item \citet{MILWARD2000a}, ``Governing the Hollow State''
             \item \cite{hood1991}, ``A Public Management for All Seasons?''
-            \item \citet{brown2006}, ``Managing Public Service Contracts''
+            \item \citet{brownManagingPublicService2006}, ``Managing Public Service Contracts''
             \item \citet{jos2009}, ``Keeping it Public''
-            \item \citet{rainey2000}, ``Comparing Public and Private Organizations''
+            \item \citet{raineyComparingPublicPrivate2000}, ``Comparing Public and Private Organizations''
         \end{itemize}
         \item Due Wednesday: Annotated Bibliography and Synthesis
         \item Due Friday: Peer Review
@@ -815,7 +872,7 @@ D- & 50.0 -- 59.9 & F & 0 -- 49.9\\
 
             \singlespace
             \bibliographystyle{apsr}
-            \bibliography{521_Fall2024}
+            \bibliography{521_students}
 
 % updated date and time
 \begin{flushright}
